# Hand-Detection

./: pyproject.toml
src/: camera_parsing.py  hand_tracker.py  main.py
