[project]
name = "computer-vision"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "mediapipe (>=0.10.33,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false